# Media

./: .gitignore  CMakeLists.txt  TODO.md  doxdocgen  main.c  main.cpp  readme.md  test.c
RefactorSrc/: app-test.cpp  sample-1.cpp  sample-2.cpp  sample-3.cpp  sample-4.cpp  sample-5.cpp  sample-6.cpp
demo/: pitivi.py
inc/: SampleManager.h  app-test.h  basic-tutorial-1.h  basic-tutorial.h  log.h  sample-3.h  sample.h  utility.hpp
install_ffmpeg/: ReadMe.txt  ffmpeg-6.0.tar.xz:Zone.Identifier
somethingtest/: pathtest  pathtest.cpp
src/: basic-tutorial-1  basic-tutorial-1.c  basic-tutorial-12.cpp  basic-tutorial-13.cpp  basic-tutorial-2.c  basic-tutorial-2.cpp  basic-tutorial-3.c  basic-tutorial-3.cpp  basic-tutorial-4.cpp  basic-tutorial-5.cpp  basic-tutorial-6.cpp  basic-tutorial-7.cpp  basic-tutorial-8.cpp  basic-tutorial-9.cpp
